--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,8 @@ aside {
     grid-area: aside;
     background-color: #e3e3e3;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
